<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hotelback"
    tools:context=".MyServiceActivity">

    <TextView
        android:fontFamily="@font/font_medium"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:layout_alignParentStart="true"
        android:id="@+id/txtRoomNumber"
        android:text="@string/my_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/o"
        android:fontFamily="@font/font_medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="220dp"
        android:layout_alignParentStart="true"
        android:text="@string/please_choose_your_external_input_in_the_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="40dp"
        android:layout_below="@+id/o"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <LinearLayout
            android:background="#86000000"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:padding="30sp"
                android:scaleType="fitCenter"
                android:src="@drawable/hdmi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/btnHDMIOne"
                    android:text="@string/hdmi_1"
                    android:selectAllOnFocus="true"
                    style="@style/test_button"/>

                <Button
                    android:id="@+id/btnHdmiTwo"
                    android:text="@string/hdmi2"
                    android:selectAllOnFocus="true"
                    style="@style/test_button"/>

                <Button
                    android:visibility="gone"
                    android:id="@+id/btnSetting"
                    android:text="@string/bongoWal"
                    android:selectAllOnFocus="true"
                    style="@style/test_button"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:id="@+id/btnMediaPlayer"
                    android:text="@string/mediaPlayer"
                    android:selectAllOnFocus="false"
                    style="@style/test_button"/>

                <Button
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:id="@+id/ayna"
                    android:text="@string/ayna"
                    android:selectAllOnFocus="true"
                    style="@style/test_button"/>

                <Button
                    android:visibility="gone"
                    android:id="@+id/btnYoutube"
                    android:text="@string/youtube"
                    android:selectAllOnFocus="false"
                    style="@style/test_button"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>